first pass at Lecture 5.7

--- a/preamble.tex
+++ b/preamble.tex
@@ -198,6 +198,7 @@
 \DeclareMathOperator{\Level}{Level}
 \DeclareMathOperator{\Mono}{Mono}
 \DeclareMathOperator{\Isog}{Isog}
+\DeclareMathOperator{\Td}{Td}
 \let\div\undefined\DeclareMathOperator{\div}{div}
 
 \numberwithin{equation}{section}
