--- a/sigma.tex
+++ b/sigma.tex
@@ -267,9 +267,6 @@ In the next interesting case of $\OS{kU}{6} = BU[6, \infty)$, there is not an ac
 
 % Identify the Thom sheaf of the universal bundle on $BSU$ as $C^2(\G; \sheaf I(0))$, together with its $C^2(\G, \Gm)$--torsor structure, and note that this automatically promotes the classifying map $MSU^E \to C^2(\G; \sheaf I(0))$ to an isomorphism.
 
-% \begin{remark}\todo[color=red]{Actually work this out.}
-% It should be possible to give an example of a complex-oriented theory which receives an $MSU$ orientation which \emph{does not} factor the complex orientation but \emph{does} (\emph{must}, really) factor the unit?  Even if one can find an example of this, I think it will be somewhat artificial: the sequence of group schemes \[0 \to BSU_E \to BU_E \to BU(1)_E \to 0\] is short exact, \emph{and} it has a splitting on the level of formal schemes.  The splitting is what gives you the isomorphism on points $BSU_E(T) \times BU(1)_E(T) \cong BU_E(T)$.  On the other hand, because the splitting \emph{isn't} a map of formal groups, it doesn't survive to the Cartier dual short exact sequence \[0 \from BSU^E \from BU^E \from BU(1)^E \from 0,\] so this will come down to exhibiting a test ring $T = E_*$ for which $BU^E(T) \to BSU^E(T)$, despite being induced by an fppf-surjective map of sheaves, is not surjective on sections over $T$.  Of course, this comes down concretely to solving for a preimage under the map \[1 - g(x) \mapsto \frac{1 - g(x +_{\G} y)}{(1 - g(x))(1 - g(y))},\] which is more plodding but might offer insight into what sort of ring (and thus orientation) you're looking for.
-% \end{remark}
 
 
 
@@ -279,8 +276,7 @@ In the next interesting case of $\OS{kU}{6} = BU[6, \infty)$, there is not an ac
 
 
 
-
-\section{Elliptic curves and $\theta$--functions}
+\section{Elliptic curves and $\theta$--functions}\label{SectionEllipticCurvesAndThetaFunctions}
 
 \todo{The goal of this lecture should be to set up all the algebraic geometry we'll need, in a coherent-enough way that the students will be able to think back and at least mumble ``yeah, ok, reasonable''.}
 
@@ -909,6 +905,15 @@ Take $E$ to be \emph{complex--orientable}.  The functor $C^3(\CP^\infty_E; \shea
 is isomorphic to the affine scheme $\Spec E_0 MU[6, \infty)$.  Moreover, the $E_0$--points of this scheme biject with ring spectrum maps $MU[6, \infty) \to E$. \qed
 \end{corollary}
 
+\todo{This is a leftover todo from the following section.  We accomplish all of this here, but I haven't looked at the references tacked on at the end of this to see if they say anything I've missed.  --- --- --- --- --- I want to sketch the reduction for even-periodic elliptic cohomology theories to the case of $MUP$, then from there to $HkP$ for the prime fields $K$, then from there to questions about additive cocycles.  We certainly don't need to recall any of these calculations, but I think it's a nice example of the philosophy that the additive formal group is such a knotted point of $\moduli{fg}$ that it suffices to check something there to learn it for the rest of the stack.  This survives in the published form of AHS, but it's stated pretty clearly as Prop 3.4 in the unpublished verison.  See also 5.12 of the unpublished version.}
+
+% \begin{remark}\todo[color=red]{Actually work this out.}
+% It should be possible to give an example of a complex-oriented theory which receives an $MSU$ orientation which \emph{does not} factor the complex orientation but \emph{does} (\emph{must}, really) factor the unit?  Even if one can find an example of this, I think it will be somewhat artificial: the sequence of group schemes \[0 \to BSU_E \to BU_E \to BU(1)_E \to 0\] is short exact, \emph{and} it has a splitting on the level of formal schemes.  The splitting is what gives you the isomorphism on points $BSU_E(T) \times BU(1)_E(T) \cong BU_E(T)$.  On the other hand, because the splitting \emph{isn't} a map of formal groups, it doesn't survive to the Cartier dual short exact sequence \[0 \from BSU^E \from BU^E \from BU(1)^E \from 0,\] so this will come down to exhibiting a test ring $T = E_*$ for which $BU^E(T) \to BSU^E(T)$, despite being induced by an fppf-surjective map of sheaves, is not surjective on sections over $T$.  Of course, this comes down concretely to solving for a preimage under the map \[1 - g(x) \mapsto \frac{1 - g(x +_{\G} y)}{(1 - g(x))(1 - g(y))},\] which is more plodding but might offer insight into what sort of ring (and thus orientation) you're looking for.
+% \end{remark}
+
+
+
+
 
 
 
@@ -942,7 +947,7 @@ commutes. \qed
 \end{corollary}
 
 \begin{example}
-Our basic example of an elliptic curve was $E_\Lambda = \C / \Lambda$, with $\Lambda$ a complex lattice.  The projection $\C \to \C / \Lambda$ has a local inverse which defines an isomorphism of formal groups \[\phi\co (E_\Lambda)^\wedge_0 \xrightarrow{\cong} \G_a \otimes \C.\]  Accordingly, we define an elliptic spectrum $H\C P_\Lambda$ whose underlying ring spectrum is $H\C$ and whose associated elliptic curve and isomorphism are $E_\Lambda$ and $\phi$.  This spectrum receives a natural map \[MU[6, \infty) \to H\C P_\Lambda,\] which to a bordism class $M \in MU[6, \infty)_{2n}$ assigns an element $\Phi_\Lambda(M) \cdot u_\Lambda^n$ for some $\Phi_\Lambda(M) \in \C$.
+Our basic example of an elliptic curve was $E_\Lambda = \C / \Lambda$, with $\Lambda$ a complex lattice.  The projection $\C \to \C / \Lambda$ has a local inverse which defines an isomorphism of formal groups \[\phi\co (E_\Lambda)^\wedge_0 \xrightarrow{\cong} \G_a \otimes \C.\]  Accordingly, we define an elliptic spectrum $H\C P_\Lambda$\todo{This is bad notation, $\C P$ looks too much like $\CP$.} whose underlying ring spectrum is $H\C$ and whose associated elliptic curve and isomorphism are $E_\Lambda$ and $\phi$.  This spectrum receives a natural map \[MU[6, \infty) \to H\C P_\Lambda,\] which to a bordism class $M \in MU[6, \infty)_{2n}$ assigns an element $\Phi_\Lambda(M) \cdot u_\Lambda^n$ for some $\Phi_\Lambda(M) \in \C$.
 \end{example}
 
 \begin{example}
@@ -955,158 +960,82 @@ This equation leads us to consider all curves $E_\Lambda$ simultaneously --- or,
 Using these ideas, we construct a cohomology theory $H \sheaf O_{\h} P$, where $\sheaf O_{\h}$ is the ring of complex-analytic functions on the upper half-plane.  The $\h$--parametrized family of elliptic curves \[\h \times \C / (1, \tau) \to \h,\] together with the logarithm, present $H \sheaf O_{\h} P$ as an elliptic spectrum $H\h P$.  The canonical map $\Phi\co MU[6, \infty) \to H\h P$ specializes at a point to give the functions $\Phi(-; \Lambda)$ considered above, and hence $\Phi(M)$ is itself a complex modular form of weight $k$.
 \end{example}
 
-In fact, this is a ghost of Ochanine and Witten's modular genus from \Cref{OchanineWittenTheorem}, as bordism class in $MU[6, \infty)$ is, in particular, a bordism class in $M\String$.  However, they know more about this function than we can presently see: they claim that it has an integral $q$--expansion.  In terms of the modular form, its $q$--expansion is given by building the Taylor expansion ``at $\infty$'' (using that unspoken decay condition).  In order to use our topological methods, it would be nice to have an elliptic spectrum embodying these $q$--expansions in the same way that $H\h P$ embodied holomorphic functions, together with a comparison map that trades a modular form for its $q$--expansion.
+In fact, this is a ghost of Ochanine and Witten's modular genus from \Cref{OchanineWittenTheorem}, as bordism class in $MU[6, \infty)$ is, in particular, a bordism class in $M\String$.  However, they know more about this function than we can presently see: they claim that it has an integral $q$--expansion.  In terms of the modular form, its $q$--expansion is given by building the Taylor expansion ``at $\infty$'' (using that unspoken decay condition).  In order to use our topological methods, it would be nice to have an elliptic spectrum embodying these $q$--expansions in the same way that $H\h P$ embodied holomorphic functions, together with a comparison map that trades a modular form for its $q$--expansion.  The main ideas leading to such a spectrum come from considering the behavior of $E_\Lambda$ as $\tau$ tends to $i \infty$.
 
+\begin{definition}
+Note that as $\tau \to i \infty$, the parameter $q = \exp(2 \pi i \tau)$ tends to $0$.  In the multiplicative model of \Cref{SectionEllipticCurvesAndThetaFunctions}, we considered $D'$ the punctured complex disk with associated family of elliptic curves \[C'_{\mathrm{an}} = \C^\times \times D' / (u, q) \sim (qu, q).\]  The fiber of $C'$ over a particular point $q \in D'$ is the curve $\C^\times / q^{\Z}$. %  , and $\theta$ determines a holomorphic function on the total space $\C^\times \times D'$.
+The Weierstrass equations give an embedding of $C'_{\mathrm{an}}$ into $D' \times \CP^2$ described by \[wy^2 + wxy = x^3 - 5 \alpha_3 w^2 x + -\frac{5 \alpha_3 + 7 \alpha_5}{12}w^3\] for certain functions $\alpha_3$ and $\alpha_5$ of $q$.  At $q = 0$, these curve collapses to the twisted cubic \[wy^2 + wxy = x^3,\] and over the whole open unit disc $D$ we call this extended family $C_{\mathrm{an}}$.
 
+Now let $A \subseteq \Z\ps{q}$ by the subring of power series which converge absolutely on the open unit disk.  It turns out that the coefficients of the Weierstrass cubic (i.e., $5\alpha_3$ and $\frac{1}{12}(5\alpha_3+7\alpha_5)$) lie in $A$, so it determines a generalized elliptic curve $C$ over $\Spec A$, and $C_{\mathrm{an}}$ is the curve given by base-change from $A$ to the ring of holomorphic functions on $D$.\citeme{Find a reference for this. You may be able to look in Morava's Section 5}  The \textit{Tate curve} $C_{\Tate}$ is defined to be the family over the intermediate object $D_{\Tate} = \Spec \Z\ps{q}$ base-changed from $A$.
+\end{definition}
 
-
-
-
-
-
-
-
-
-
-
-This definition of elliptic spectrum is inconveniently restrictive, essentially because $H\C P$ and $H\Z P$ (with associated formal groups $\G_a$) do not count as elliptic spectra.  Ando, Hopkins, and Strickland work around this by working with the following generalization of an elliptic curve:
+The singular fiber at $q = 0$ prompts us to enlarge our notion of elliptic curve slightly.
 
 \begin{definition}[{\cite[Definitions B.1-2]{AHSTheoremOfTheCube}}]\citeme{Is this right? Check the published AHS to make sure}
-A \textit{Weierstrass curve} is any curve of the form \[C(a_1, a_2, a_3, a_4, a_6) := \left\{ ([x : y : z], s) \in \mathbb P^2 \times S \middle| \begin{array}{c} y^2 z + a_1(s) xyz + a_3(s) yz^2 = \\ x^3 + a_2(s) x^2 z + a_4(s) x z^2 + a_6(s) z^3 \end{array} \right\}.\]  A \textit{generalized elliptic curve} over $S$ is a scheme $C$ equipped with maps \[S \xrightarrow{0} C \xrightarrow{\pi} S\] such that $C$ is Zariski--locally isomorphic to a system of Weierstrass curves (in a way preserving $0$ and $\pi$).\footnote{An elliptic curve in the usual sense turns out to be a generalized elliptic curve which is smooth, i.e., the discriminant of the Weierstrass equations is a unit.}
+A \textit{Weierstrass curve} is \emph{any} curve of the form\todo{You use $w$s above but $z$s here.} \[C(a_1, a_2, a_3, a_4, a_6) := \left\{ ([x : y : z], s) \in \mathbb P^2 \times S \middle| \begin{array}{c} y^2 z + a_1(s) xyz + a_3(s) yz^2 = \\ x^3 + a_2(s) x^2 z + a_4(s) x z^2 + a_6(s) z^3 \end{array} \right\}.\]  A \textit{generalized elliptic curve} over $S$ is a scheme $C$ equipped with maps \[S \xrightarrow{0} C \xrightarrow{\pi} S\] such that $C$ is Zariski--locally isomorphic to a system of Weierstrass curves (in a way preserving $0$ and $\pi$).\footnote{An elliptic curve in the usual sense turns out to be a generalized elliptic curve which is smooth, i.e., the discriminant of the Weierstrass equations is a unit.}
+\end{definition}
+
+\begin{remark}\label{TwistedCubicGivesGm}\citeme{Some kind of reference would be appreciated}
+The singularities of a degenerate Weierstrass equation always occur outside of a formal neighborhood of the marked identity point, which in fact still carries the structure of a formal group.  The formal group associated to the twisted cubic is the multiplicative group, and the isomorphism making the identification extends a family of such isomorphisms $\phi$ over the nonsingular part of the Tate curve.
+\end{remark}
+
+\begin{definition}[{\cite[Section 5]{MoravaFormsOfKthy}, \cite[Section 2.7]{AHSTheoremOfTheCube}}]
+The elliptic spectrum $K_{\Tate}$, called \textit{Tate $K$--theory}, has as its underlying spectrum $KU\ps{q}$.  The associated elliptic curve is $C_{\Tate}$, and the isomorphism $\CP^\infty_{KU\ps{q}} \cong (C_{\Tate})^\wedge_0$ is $\phi$ from \Cref{TwistedCubicGivesGm}.
 \end{definition}
 
 \noindent The trade for the breadth of this definition is that theorems pulled from the study of abelian varities have to be shown to extend uniquely to generalized elliptic curves which are not merely elliptic curves.
 
 \begin{theorem}[{\cite[Propositions 2.57 and B.25]{AHSTheoremOfTheCube}}]\label{GeneralizedTheta3IsTrivial}
-For a generalized elliptic curve $C$, there is a canonical trivialization $s$ of $\Theta^3 \sheaf I(0)$.  If $C$ is a smooth elliptic curve, then $s$ agrees with that of \Cref{Theta3IsTrivial}. \qed
+For a generalized elliptic curve $C$, there is a canonical trivialization $s$ of $\Theta^3 \sheaf I(0)$ which is compatible with change of base and with isomorphisms.  If $C$ is a smooth elliptic curve, then $s$ agrees with that of \Cref{Theta3IsTrivial}. \qed
 \end{theorem}
 
-\begin{example}
-Integral cohomology with the curve $zy^2 = x^3$.
-\end{example}
-
-\begin{example}
-Ordinary $K$--theory with the curve $zy^2 + zxy = x^3$.
-\end{example}
-
-\begin{example}
-Tate $K$--theory
-\end{example}
-
-\todo[inline]{I want to sketch the reduction for even-periodic elliptic cohomology theories to the case of $MUP$, then from there to $HkP$ for the prime fields $K$, then from there to questions about additive cocycles.  We certainly don't need to recall any of these calculations, but I think it's a nice example of the philosophy that the additive formal group is such a knotted point of $\moduli{fg}$ that it suffices to check something there to learn it for the rest of the stack.  This survives in the published form of AHS, but it's stated pretty clearly as Prop 3.4 in the unpublished verison.  See also 5.12 of the unpublished version.}
-
-\todo[inline]{From the intro to the AHS preprint: For any lattice $\Lambda \subseteq \C$, we get a map $\Phi: MU[6, \infty) \to HP_\Lambda$ which sends $(2n)$--dimensional bordism classes $M$ to numbers $\Phi(M; \Lambda) \cdot u_{\Lambda}^n$. Suppose $\Lambda$ and $\Lambda'$ are two lattices with $\lambda \cdot \Lambda = \Lambda'$. This induces a map $HP_{\Lambda'} \to HP_\Lambda$ which intertwines the maps $\Phi$ by $\Phi(M; \lambda \cdot \Lambda) = \lambda^{-n} \Phi(M; \Lambda)$.  The usual appearance of a modular form (via $SL_2$ invariance) can be extracted from the top of page 5, if you want.  You can also show that this ``functional equation for a modular form'' is actually realized by a function by considering the elliptic cohomology theory built out of the bundle of elliptic curves $\mathfrak h \times \C/(1, \tau) \to \mathfrak h$ and the ordinary coefficient ring $\sheaf O[u^\pm]$, $\sheaf O$ the ring of holomorphic functions on $\mathfrak h$.}
-
------------
-
-
-
-
-
-
-\citeme{This part of the story is cribbed from AHS Section 2.6}
-The other success of the $\theta$--functions story is that it gives access to a small piece of the compactified moduli of elliptic curves, $\overline{\moduli{ell}}$, called the Tate curve.  In this parametrized setting, define $D'$ to be the punctured complex disk, and set \[C'_{\mathrm{an}} = \C^\times \times D' / (u, q) \sim (qu, q).\]  The fiber of $C'$ over a particular point $q \in D'$ is the curve $\C^\times / q^{\Z}$ considered above, and $\theta$ determines a holomorphic function on the total space $\C^\times \times D'$.  The Weierstrass embeddings discussed above give an embedding of $C'_{\mathrm{an}}$ into $D' \times \CP^2$ described by \[wy^2 + wxy = x^3 - 5 \alpha_3 w^2 x + -\frac{5 \alpha_3 + 7 \alpha_5}{12}w^3\] for certain functions $\alpha_3$ and $\alpha_5$ of $q$.  At $q = 0$, these curve collapses to the twisted cubic \[wy^2 + wxy = x^3,\] and over the whole open unit disc $D$ we call this extended family $C_{\mathrm{an}}$.
-
-Now let $A \subseteq \Z\ps{q}$ by the subring of power series which converge absolutely on the open unit disk.  It turns out that the coefficients of the Weierstrass cubic (i.e., $5\alpha_3$ and $\frac{1}{12}(5\alpha_3+7\alpha_5)$) lie in $A$, so it determines a generalized elliptic curve $C$ over $\Spec A$, and $C_{\mathrm{an}}$ is the curve given by base-change from $A$ to the ring of holomorphic functions on $D$.  The Tate curve $C_{\Tate}$ is defined to be the ``generalized elliptic curve'' over the intermediate object $D_{\Tate} = \Spec \Z\ps{q}$ as base-changed from $A$.  ``Generalized'' here means that the fiber over $q = 0$ is \emph{not} an elliptic curve --- but on its smooth locus it still carries the structure of a group scheme, and so one can still make sense of the associated formal group.
-
-There are three natural coordinates available to us on $\widehat C_{\mathrm{an}}'$:
-\begin{align*}
-t & = x/y, &
-\theta^{1/2,1/2}_q(u) & = \theta(t), &
-1 - u & = 1 - u(t).
-\end{align*}
-Of these, only $t$ gives an algebraic coordinate on $C_{\mathrm{an}}'$ (and in fact on $C_{\mathrm{an}}$).  The others expand as power series in $t$ to
-\begin{align*}
-\theta(t) & = t + O(t^2), &
-1 - u(t) & = t + O(t^2).
-\end{align*}
-The coefficients of the powers of $t$ in these series are holomorphic functions on the punctured disk $D'$.  In fact, they extend to $D$ and have integer coefficients\todo{... which you see by working over the completion of $\Z[u^pm]\ps{q}$ at $(1 - u)$}.  Thus $\theta(t)$ and $u(t)$ actually lie in $A\ps{t}$, so give functions on $\widehat C$ and $\widehat C_{\Tate}$.
-
-Now, although $\theta^{1/2,1/2}_q$ does not give a section of $\sheaf I(0)$ on $C^3_{\mathrm{an}}$, it does descend to trivialize $\Theta^3 \sheaf I(0)$.  Then, since meromorphic sections of $\Theta^3 \sheaf I(0)$ on $C^3$ inject into such over $C_{an}^3$, the (transcendental) equation $s(C_{an}^3) = \delta^3 \theta^{1/2,1/2}_q(u)$ nonetheless determines the cubical structure on $\sheaf I(0)$ over $C$ and hence over $C_{\Tate}$ and $\widehat C_{\Tate}$ as well --- it can be expressed by $\delta^3 \theta(t)$.  It follows, finally, that the cubical structure extended over the compactification $D$ is also $\delta^3 \theta(t)$, since this function extends to $D$.\todo{Also, the invariant differential is $dx/(2y+x) = du/u$?}
-
-
-
-
-
-
-
-
-
-Define the classical $\theta$--function on the Tate curve by \[\tilde \theta_q(u) = (1 - u) \prod_{n > 0} (1 - q^n u)(1 - q^nu^{-1}) \in \Z[u^{\pm}]\llbracket q \rrbracket.\]  Write $t = 1-u$ for the usual coordinate on the formal multiplicative group; then we can think of $\tilde \theta_q(u)$ as an element of $\Z\llbracket q\rrbracket\llbracket t\rrbracket$ and thus as a function on $\G_m \times D_{\Tate}$, $D_{\Tate} = \Spec \Z\llbracket t \rrbracket$ the Tate domain.  In fact, $\tilde\theta_q(u)$ is even a coordinate on this formal group over $D_{\Tate}$, which one can identify with $\widehat C_{\Tate}$.
-
-By formal rearrangements one can produce the familiar functional equations
-\begin{align*}
-\tilde \theta_q(qu) & = -u^{-1} \tilde\theta_q(u), \\
-\tilde \theta_q(q^k u) & = q^{-k(k-1)/2} (-u)^{-k} \tilde\theta_q(u).
-\end{align*}
-\todo{This is actually kind of hard to do algebraically. It's discussed in Appendix A of the AHS preprint.}
-Regarding $\tilde\theta$ as an element of $C^0(\widehat C_{\Tate}; \L)$, this gives a cubical structure \[\delta^3(\tilde\theta) \in C^3(\widehat C_{\Tate}; \L),\] and one computes $\delta(\tilde\theta) = dt/\theta$ for \[\theta_q(u) = (1 - u) \prod_{n > 0} \frac{(1 - q^nu)(1 - q^n u^{-1})}{(1 - q^n)^2} \in \Z[u^\pm]\llbracket q \rrbracket,\] so you can also apply $\delta^2$ to this expression.\todo{Why would someone find this more familiar?  Also, in what sense is $\delta$ anything like differentiation?}  The functional equation has something to say about this cubical structure: \[(\delta^3 \tilde\theta_q)(u, v, w) = \begin{cases} (\delta^3 \tilde\theta_q)(qu, v, w), \\ (\delta^3 \tilde\theta_q)(u, qv, w), \\ (\delta^3 \tilde\theta_q)(u, v, qw). \end{cases}\]\todo{Mike has a nice remark about this: the exponents in the iterated functional equation for $\tilde\theta_q$ are quadratic in $k$ and so killed by $\delta^3$, which is another differentiation-type claim.}
-
-\begin{theorem}\citeme{AHS preprint Prop 2.49}
-The cubical structure $\delta^3(\tilde \theta)$ is the restriction of $s(C_{\Tate} / D_{\Tate})$ to $\widehat C_{\Tate}$.
-\end{theorem}
+\begin{corollary}\label{D3thetaTrivializes}
+The trivializing section $s$ associated to $C_{\Tate}$ is given by $\delta^{\circ 3} \theta$, where\todo{This is a little funny, because this is \emph{not} one of the usual $\theta$--functions from \Cref{SectionEllipticCurvesAndThetaFunctions}.} \[\theta_q(u) = (1 - u)\prod_{n > 0}(1 - q^n u)(1 - q^n u^{-1}).\]
+\end{corollary}
 \begin{proof}
-The ratio $s(\widehat C_{\Tate} / D_{\Tate}) / \delta^3(\tilde\theta)$ is a power series $g \in \Z\llbracket q, t_0, t_1, t_2\rrbracket$ and we need to show that $g = 1$.  This will hold if we can show that there is a neighborhood of $0$ in $\C^4$ on which $g$ converges to $1$, so we can employ complex analytic techniques.  Fix $q \in \C$ with $0 < |q| < 1$ and let $C_q$ be the $\C$--analytic elliptic curve fibering over this point in $D_{\Tate} \times \Spec \C$.  The product expansion of $\tilde\theta_q(u)$ converges locally uniformly to an analytic function on $\C^\times$ vanishing only on $q^{\Z}$ and there only to first order.  It should suffice to show that $s(C_q/\C) = \delta^3(\tilde\theta_q)$ as analytic functions on $(\C^\times)^{\times 3}$.  The consequence for $\delta^3 \tilde\theta$ of the functional equation for $\tilde\theta$ recalled above shows that $\delta^3\tilde\theta_q$ descends to give a meromorphic $1$--form $\phi$ on $C_q^{\times 3}$.  Then, because $\tilde\theta_q$ has only simple poles on $q^{\Z}$ and none elsewhere, we deduce that $\phi$ is actually a cubical structure, and unicity then finally forces $\phi = s(C_q / \C)$.
+Even though $\theta$ is not a function on $C_{\Tate}$ because of quasiperiodicity, it does trivialize both $\pi^* \sheaf I(0)$ for $\pi\co \C^\times \times D \to C_{\Tate}$ and $\sheaf I(0)$ for $(C_{\Tate})^\wedge_0$.  Moreover, the quasiperiodicities in the factors in the formula defining $\delta^3 \theta|_{(C_{\Tate})^\wedge_0}$ cancel each other out, and the function does descend to give a trivialization of $\Theta^3 \sheaf I(0)$.  By the unicity clause in \Cref{GeneralizedTheta3IsTrivial}, it must give a formula expressing $s$.\todo{This use of unicity is a little opaque to me.  I guess we're using that $\delta^3 \theta$ is ``obviously'' the natural trivializing section for nonsingular values of $q$?  Or maybe we just mean that the Tate curve covers much of $\moduli{ell} \times \Spec \C$.}
 \end{proof}
 
-\todo[inline]{See also the bottom of page 22 in the AHS preprint for the relevant theory of integration (esp. Prop 2.54), and see Proposition 2.56 for a comparison theorem between the integration theory and $\sigma_{\Tate}$.}
-
 \begin{definition}
-Let $\gamma$ denote the element $K_{\Tate}(\Z \times BU)$ determined by the vector bundle operation \[\gamma: -V \mapsto \prod_{n > 0} \sum_{k \ge 0} q^{nk} \Sym^k(V),\] and let $\bar\gamma$ denote its complex conjuguate.  Since $K_{\Tate}^0(MUP)$ is a module over $K_{\Tate}(\Z \times BU)$, we can define an element \[\sigma_{\Tate} := \gamma \cdot \bar\gamma \cdot \alpha,\] where $\alpha$ is the usual orientation $MP \to KU$ corresponding to the coordinate $1 - t$ on the formal group $\G_m$.
+The induced map $\sigma_{\Tate}\co MU[6, \infty) \to K_{\Tate}$ is called the \textit{complex $\sigma$--orientation}.
 \end{definition}
 
-\todo{``Modularity'' of the $K_{\Tate}$ orientation?}
-
-
-------------
-
-Here's what the published version of AHS has to say about the $\sigma$--orientation of $K_{\Tate}$.  (See Section 2.7.)
-
-$K_{\Tate}$ has multiplicative cohomology theory $K\ps{q}$, formal group multiplicative (as induced by $K$--theory), and isomorphism to $\widehat C_{\Tate}$ given by $1 - u(t)$ as in Lecture 5.2.  Since the cubical structure on $\widehat C_{\Tate}$ is given as $\delta^3$ of something, it follows that the $\sigma$--orientation factors as
+\begin{corollary}
+Let $M \in \pi_{2n} MU[6, \infty)$ be a bordism class.  The $q$--expansion of Witten's modular form $\Phi(M)$ has integral coefficients.
+\end{corollary}
+\begin{proof}
+The span of elliptic spectra equipped with $MU[6, \infty)$--orientations
 \begin{center}
 \begin{tikzcd}
-MU[6, \infty) \arrow{d} \arrow{drr} \\
-MU \arrow{r} & MUP \arrow{r}{\tilde \theta} & K\ps{q}.
+& MU[6, \infty) \arrow["\Phi"]{rd} \arrow{d} \arrow["\sigma_{\Tate}"']{ld} \\
+K_{\Tate} \arrow{r} & K_{\Tate} \otimes \C & H\h P \arrow{l}
 \end{tikzcd}
 \end{center}
-Our goal is to express in terms of characteristic classes the induced map on homotopy by the horizontal composite.
+models $q$--expansion.  The arrow $K_{\Tate} \to K_{\Tate} \otimes \C$ is injective on homotopy, which shows that the $q$--expansion of $\Phi(M)$ lands in the subring of integral power series.
+\end{proof}
 
-To start with, the topological restriction $MU \to MUP \to E$ sends the coordinate $f$ on $\G_E$ to the rigid section $\delta f$ of $\Theta^1(\sheaf I(0)) = \sheaf I(0)_{0} \otimes \sheaf I(0)^{-1}$.  The most straightforward formula for $\delta f$ is $f(0) / f$, which is confusing, since $f(0) = 0$ usually but not as a section of $\sheaf I(0)_0$.  It's probably clearer to express $\delta f$ in terms of the isomorphism \[\sheaf I(0)_0 \otimes \sheaf I(0)^{-1} \cong \omega \otimes \sheaf I(0)^{-1},\] where $\delta f$ is given by the formula \[\delta f = \frac{f'(0) Dx}{f(x)},\] $Dx$ the invariant differential with value $dx$ at $0$.
+In fact, \Cref{D3thetaTrivializes} gives us access to a formula for $\sigma_{\Tate} = \delta^3 \theta$, where $\theta$ here is interpreted as a coordinate on $(C_{\Tate})^\wedge_0$.  This means that $\sigma_{\Tate}$ belongs to the commutative triangle
+\begin{center}
+\begin{tikzcd}
+MU[6, \infty) \arrow["\delta"]{d} \arrow["\sigma_{\Tate}"]{drrr} \\
+MSU \arrow["\delta"]{r} & MU \arrow["\delta"]{r} & MUP \arrow["\theta"']{r} & K\ps{q}.
+\end{tikzcd}
+\end{center}
+To begin, the usual map $MUP \to KU$ selects the coordinate $f(u) = 1 - u$ on the formal completion of $\Gm = \Spec \Z[u^\pm]$.  The induced map \[MU \xrightarrow{\delta} MUP \to KU\] sends $f$ to the rigid section $\delta f$ of \[\Theta^1 \sheaf I(0) = \sheaf I(0)_0 \otimes \sheaf I(0)^{-1} \cong \omega \otimes \sheaf I(0),\] and in terms of the right-hand side, \[\delta f = \frac{f'(0)}{f(u)} Du = \frac{1}{1 - u} \left( - \frac{du}{u} \right),\] where $Du$ is the invariant differential.  We can augment this to a calculation of $\delta \theta$ by considering the composite \todo{This first map is one of the units.  Which is it?} \[\delta \theta\co MU \xrightarrow{\eta_R} MU \sm MU \simeq MU \sm BU_+ \xrightarrow{\delta(1 - u) \sm \theta'} K_{\Tate}\] where $\theta'$ is the element of $BU^{K_{\Tate}} \cong C^1(\widehat C_{\Tate}; \Gm)$ given by the formula\todo{I'm confused.  Where did this class come from? Is it the derivative of $\theta$?  The $\delta$--derivative of $\theta$?  Something else?} \[\theta' = \prod_{n \ge 1} \frac{(1 - q^n)^2}{(1 - q^n u)(1 - q^n u^{-1})}.\]  This means that its effect on a line bundle is determined by \[\theta'(1 - \L) = \prod_{n \ge 1} \frac{(1 - q^n)^2}{(1 - q^n \L)(1 - q^n \L^{-1})},\] and its effect on vector bundles in general is determined by the splitting principle and an exponential law.  In fact, one can work this exponential law out to mean \[\theta'(\dim V \cdot 1 - V) = \bigotimes_{n \ge 1} \bigoplus_{j \ge 0} \Sym^j(\dim V \cdot 1 - V \otimes_{\R} \C) q^{jn} =: \bigotimes_{n \ge 1} \Sym_{q^n}(- \bar V_{\C}).\]
 
-In the example of $K$--theory, the usual complex Atiyah--Bott--Shapiro map $MP \to K$ corresponds to the coordinate $1 - u$ on the formal completion of $\Gm = \Spec \Z[u^\pm]$.  The invariant differential is $D(1 - u) = -du/u$, and the restriction to $MU$ classifies the $\Theta^1$--struucture \[\delta(1 - u) = \frac{1}{1 - u}\left(-\frac{du}{u}\right).\]  In the more complex example of Tate $K$--theory, the map \[MU \to MUP \xrightarrow{\tilde\theta} K_{\Tate}\] factors by the coordinate change map \[MU \to MU \sm MU \simeq MU \sm BU_+ \xrightarrow{\delta(1 - u) \sm \theta'} K_{\Tate},\] where $\theta'$ is the element of $BU^{K_{\Tate}} \cong C^1(\widehat C_{\Tate}; \Gm)$ given by the formula \[\theta' = \prod_{n \ge 1} \frac{(1 - q^n)^2}{(1 - q^n u)(1 - q^n u^{-1})}.\]
-
-\needproof{The Todd genus}
-In geometric terms, the homotopy groups $\pi_* MU \sm BU_+$ are the bordism groups of pairs $(M, V)$ consisting of a stably almost complex manifold $M$ and a virtual complex vector bundle $V$ over $M$ of virtual dimension $0$.  The map \[\pi_* MU \to \pi_* (MU \sm BU_+)\] sends a manifold $M$ to the pair $(M, \nu)$ where $\nu$ is the reduced stable normal bundle.  Next, the map $\pi_* \delta(1 - u)$ sends a manifold $M$ of dimension $2n$ to $p_!(1) \in K^{-2n}(*)$ where $p: M \to *$ is the unique map.  One has \[p_!(1) = \operatorname{Td}(M) \left( -\frac{du}{u} \right)^n,\] where $\operatorname{Td}(M)$ is the Todd genus of $M$ (and it is customary to suppress the grading and write $p_!(1) = \operatorname{Td}(M)$).  The map $\theta'$ is where the real work is: it is the stable exponential characteristic class taking the value \[\prod_{n \ge 1} \frac{(1 - q^n)^2}{(1 - q^n \L)(1 - q^n \L^{-1})}\] on the reduced class $(1 - \L)$ of a line bundle $\L$.  This stable exponential characteristic class can easily be identified with \[V \mapsto \bigotimes_{n \ge 1} \Sym_{q^n}(- \bar V_{\C}),\] where $V_{\C} = V \otimes_{\R} \C$, $\bar V_{\C} = V_{\C} - \eps^{\oplus \dim V}$, and $\Sym_t(W)$ is defined for (complex) vector bundles $W$ by \[\Sym_t(W) = \bigoplus_{m \ge 0} \Sym^m(V) t^m \in K(M)\ps{t}\] and extended to virtual bundles using the exponential rule $\Sym_t(W_1 - W_2) = \Sym_t(W_1) / \Sym_t(W_2)$.  Altogether, the effect of the $\sigma$--orientation therefore sends an almost complex manifold $M$ of dimension $2n$ to
+Knowing that $(\eta_R)_*\co MU_* \to \pi_*(MU \sm \Susp^\infty_+ BU)$ sends a manifold $M$ with stable normal bundle $\nu$ to the pair $(M, \nu)$, we compute the composite on homotopy to be
 \begin{align*}
-\pi_* \sigma_{K_{\Tate}}(M) & = f_! \left( \bigotimes_{n \ge 1} \Sym_{q^n}(\bar T_{\C}) \right) \\
-& = \operatorname{Td}\left(M; \bigotimes_{n \ge 1} \Sym_{q^n}(\bar T_{\C}) \right) \left( -\frac{du}{u} \right)^n \\
-& \in \widetilde K\ps{q}^0(S^{2n}).
+\sigma_{\Tate}(M \in \pi_{2n} MU[6, \infty)) & = (\delta(1-u) \sm \theta')(M, \nu) \\
+& =: \Td\left(M; \bigotimes_{n \ge 1} \Sym_{q^n}(\bar \tau_{\C}) \right).
 \end{align*}
+This is exactly Witten's formula for his genus, as applied to complex manifolds with first two Chern classes trivialized.
 
-This is basically Witten's formula for his genus.  There is a small caveat: Witten's genus is defined for Spin manifolds.  With some care, perhaps we could construct a homotopical square\todo{Is this possible?  Or do we really need the $\String$--orientation to make this happen?  Is this exactly the topic for the next day?!!}
-\begin{center}
-\begin{tikzcd}
-MSU \arrow{r} \arrow{d} & MU \arrow{d} \\
-M\Spin \arrow[densely dotted]{r} & K_{\Tate},
-\end{tikzcd}
-\end{center}
-but for the moment we content ourselves with a square of homotopy groups
-\begin{center}
-\begin{tikzcd}
-\pi_* MSU \arrow{r} \arrow{d} & \pi_* MU \arrow{d} \\
-\pi_* M\Spin \arrow[densely dotted]{r} & \pi_* K_{\Tate}.
-\end{tikzcd}
-\end{center}
-Let $M$ be a $\Spin$--manifold of dimension $2n$, and use the splitting principle to write \[TM = \L_1 \oplus \cdots \oplus \L_n\] for complex line bundles $\L_i$.  The $\Spin$--structure gives a square root of $\prod \L_i$, which is equivalent to picking a square root for each $\L_i$.\todo{Is it?}  Since, for each $i$, the $O(2)$--bundles underlying $\L_i^{1/2}$ and $\L_i^{-1/2}$ are isomorphic, we can write \[TM = \sum \L_i + \L_i^{-1/2} - \L_i^{1/2},\] which is now a sum of $SU$--bundles.  Using this, one easily checks that the $\sigma$--orientation of $M$ gives \[\widehat A \left(M; \bigotimes_{n \ge 1} \Sym_{q^n}(\bar T_{\C}) \right) \left(-\frac{du}{u}\right)^n,\] where the $\widehat A$--genus is the push-forward in $KO$--theory associated to the unique orientation $M\Spin \to KO$ fitting into the commutative diagram
-\begin{center}
-\begin{tikzcd}
-MSU \arrow{r} \arrow{d} & MU \arrow{d} \\
-M\Spin \arrow{rd} \arrow{r} & K \\
-& KO \arrow{u}{\widehat A}.
-\end{tikzcd}
-\end{center}
+\todo[inline]{This is missing something.  We have written $\Td(M) (-du/u)^n$ for $MU_{2n} \to KU_{2n}$, the effect in homotopy of the usual coordinate on $KU$.  You can also think of this as $p_! 1$ for $1 \in K^{2n} M$ and $p\co M \to *$.  More generally, then, $\Td(M; V) := p_! V$.  But, also, we did describe pushforwards earlier... maybe we can make use of this?}
 
-Finally, we want to see that for $[M] \in \pi_{2n} MU[6, \infty)$, \[\Phi(M) := (\pi_{2n} \sigma_{K_{\Tate}})(M) \left( -\frac{du}{u} \right)^{-n} \in \pi_0 K_{\Tate} = Z\ps{q}\] is a modular form.  We've at least seen that $\Phi(M)$ is a holomorphic function on $D$, with integral $q$--expansion coefficients.  It suffices to show that if $\pi: \h \to D$ is the map $\pi(\tau) = e^{2 \pi i \tau}$, then $\pi^* \Phi(M)$ transforms correctly under the action of $SL_2(\Z)$.  This is supposed to follow from stuff in the introduction (pp.\ 600-1, also Example 2.3).
+
+
+
+
 
 
 
@@ -1265,11 +1194,40 @@ of signature \[\Tor^{K_* \Spin/SU}_{*, *}(K_* MU[6, \infty), K_*) \Rightarrow K_
 
 
 
+------
 
 
--------
 
-Some other things that might belong in this chapter:
+
+This is basically Witten's formula for his genus.  There is a small caveat: Witten's genus is defined for Spin manifolds.  With some care, perhaps we could construct a homotopical square\todo{Is this possible?  Or do we really need the $\String$--orientation to make this happen?  Is this exactly the topic for the next day?!!}
+\begin{center}
+\begin{tikzcd}
+MSU \arrow{r} \arrow{d} & MU \arrow{d} \\
+M\Spin \arrow[densely dotted]{r} & K_{\Tate},
+\end{tikzcd}
+\end{center}
+but for the moment we content ourselves with a square of homotopy groups
+\begin{center}
+\begin{tikzcd}
+\pi_* MSU \arrow{r} \arrow{d} & \pi_* MU \arrow{d} \\
+\pi_* M\Spin \arrow[densely dotted]{r} & \pi_* K_{\Tate}.
+\end{tikzcd}
+\end{center}
+Let $M$ be a $\Spin$--manifold of dimension $2n$, and use the splitting principle to write \[TM = \L_1 \oplus \cdots \oplus \L_n\] for complex line bundles $\L_i$.  The $\Spin$--structure gives a square root of $\prod \L_i$, which is equivalent to picking a square root for each $\L_i$.\todo{Is it?}  Since, for each $i$, the $O(2)$--bundles underlying $\L_i^{1/2}$ and $\L_i^{-1/2}$ are isomorphic, we can write \[TM = \sum \L_i + \L_i^{-1/2} - \L_i^{1/2},\] which is now a sum of $SU$--bundles.  Using this, one easily checks that the $\sigma$--orientation of $M$ gives \[\widehat A \left(M; \bigotimes_{n \ge 1} \Sym_{q^n}(\bar T_{\C}) \right) \left(-\frac{du}{u}\right)^n,\] where the $\widehat A$--genus is the push-forward in $KO$--theory associated to the unique orientation $M\Spin \to KO$ fitting into the commutative diagram
+\begin{center}
+\begin{tikzcd}
+MSU \arrow{r} \arrow{d} & MU \arrow{d} \\
+M\Spin \arrow{rd} \arrow{r} & K \\
+& KO \arrow{u}{\widehat A}.
+\end{tikzcd}
+\end{center}
+
+
+
+
+
+
+\subsection*{Some other things that might belong in this chapter}
 
 The cubical structure on a singular (generalized) elliptic curve is not unique, but (published) AHS has an argument showing that the unicity of the choice on the nonsingular ``bulk'' extends to a unique choice on the ``boundary'' of the compactified moduli too.
 
