--- a/main.bib
+++ b/main.bib
@@ -638,8 +638,26 @@ MRREVIEWER = {Douglas C. Ravenel},
        URL = {http://dx.doi.org/10.2307/1971192},
 }
 
-@article {CowenMortonStrickland,
-    AUTHOR = {Cowen Morton, Dena S. and Strickland, Neil},
+@article {Morton,
+    AUTHOR = {Morton, Dena S. Cowen},
+     TITLE = {The {H}opf ring for {$b{\rm o}$} and its connective covers},
+   JOURNAL = {J. Pure Appl. Algebra},
+  FJOURNAL = {Journal of Pure and Applied Algebra},
+    VOLUME = {210},
+      YEAR = {2007},
+    NUMBER = {1},
+     PAGES = {219--247},
+      ISSN = {0022-4049},
+     CODEN = {JPAAA2},
+   MRCLASS = {55P43 (55N15)},
+  MRNUMBER = {2311183},
+MRREVIEWER = {Jes{\'u}s Gonz{\'a}lez},
+       DOI = {10.1016/j.jpaa.2006.09.014},
+       URL = {http://dx.doi.org/10.1016/j.jpaa.2006.09.014},
+}
+
+@article {MortonStrickland,
+    AUTHOR = {Morton, Dena S. Cowen and Strickland, Neil},
      TITLE = {The {H}opf rings for {$K{\rm O}$} and {$K{\rm U}$}},
    JOURNAL = {J. Pure Appl. Algebra},
   FJOURNAL = {Journal of Pure and Applied Algebra},
