--- a/sigma.tex
+++ b/sigma.tex
@@ -807,8 +807,11 @@ This follows much along the lines of \Cref{HopfRingForEBP}.  We check that the s
 \end{proof}
 
 \begin{remark}
-Our analysis in \Cref{LEFTCooperations} gives us full access to the Hopf ring structure of the \emph{nonconnective} cooperations $H\F_p{}_* \OS{KU}{2*}$.  Using a variety of techniques, Cowen Morton and Strickland calculated the Hopf ring structure of $H\F_2{}_* \OS{K}{2*}$ where $K$ ranges among the nonconnective objects $KO$, $KU$, $KSp$, and the less common ``$KT$'', which is self--conjugated $K$--theory~\cite{CowenMortonStrickland,StricklandBottPeriodicity}.
+Our analysis in \Cref{LEFTCooperations} gives us full access to the Hopf ring structure of the \emph{nonconnective} cooperations $H\F_p{}_* \OS{KU}{2*}$.  Using a variety of techniques, Morton and Strickland calculated the Hopf ring structure of $H\F_2{}_* \OS{K}{2*}$ where $K$ ranges among the nonconnective objects $KO$, $KU$, $KSp$, and the less common ``$KT$'', which is self--conjugated $K$--theory~\cite{Morton,MortonStrickland,StricklandBottPeriodicity}.\todo{This could be expanded some, as not all these references are relevant to what's written.}
 \end{remark}
+
+
+
 
 
 
