--- a/main.bib
+++ b/main.bib
@@ -790,6 +790,27 @@ MRREVIEWER = {J. F. Adams},
        URL = {http://dx.doi.org/10.2307/2374093},
 }
 
+@article {RWY,
+    AUTHOR = {Ravenel, Douglas C. and Wilson, W. Stephen and Yagita,
+              Nobuaki},
+     TITLE = {Brown-{P}eterson cohomology from {M}orava {$K$}-theory},
+   JOURNAL = {$K$-Theory},
+  FJOURNAL = {$K$-Theory. An Interdisciplinary Journal for the Development,
+              Application, and Influence of $K$-Theory in the Mathematical
+              Sciences},
+    VOLUME = {15},
+      YEAR = {1998},
+    NUMBER = {2},
+     PAGES = {147--199},
+      ISSN = {0920-3036},
+     CODEN = {KTHEEO},
+   MRCLASS = {55N20 (55N15 55N22 55P20)},
+  MRNUMBER = {1648284},
+MRREVIEWER = {David C. Johnson},
+       DOI = {10.1023/A:1007776725714},
+       URL = {http://dx.doi.org/10.1023/A:1007776725714},
+}
+
 @article {Schoeller,
     AUTHOR = {Schoeller, Colette},
      TITLE = {\'{E}tude de la cat\'egorie des alg\`ebres de {H}opf
